--- a/.github/workflows/QCA-ALL.yml
+++ b/.github/workflows/QCA-ALL.yml
@@ -20,6 +20,11 @@ on:
         default: 'false'
         required: false
         type: boolean
+      DBGSHELL:
+        description: 'Enable tmate shell for debug'
+        type: boolean
+        required: false
+        default: 'false'
 
 #CI权限
 permissions: write-all
@@ -64,3 +69,5 @@ jobs:
       WRT_PACKAGE: ${{inputs.PACKAGE}}
       #仅输出配置文件
       WRT_TEST: ${{inputs.TEST}}
+      #Debug Shell
+      DBGSHELL: ${{inputs.DBGSHELL}}
