--- a/.github/workflows/WRT-CORE.yml
+++ b/.github/workflows/WRT-CORE.yml
@@ -40,6 +40,9 @@ on:
       WRT_TEST:
         required: false
         type: string
+      DBGSHELL:
+        required: false
+        type: boolean
 
 env:
   GITHUB_TOKEN: ${{secrets.GITHUB_TOKEN}}
@@ -56,14 +59,23 @@ env:
   WRT_PACKAGE: ${{inputs.WRT_PACKAGE}}
   WRT_TEST: ${{inputs.WRT_TEST}}
 
+
 jobs:
   core:
     name: ${{inputs.WRT_SOURCE}}
     runs-on: ubuntu-latest
     steps:
-
       - name: Checkout Projects
         uses: actions/checkout@main
+
+      - name: Machine Information
+        run: |
+          echo "======================="
+          lscpu | grep -E "name|Core|Thread"
+          echo "======================="
+          free -m
+          echo "======================="
+
 
       - name: Initialization Environment
         env:
@@ -93,6 +105,7 @@ jobs:
 
       - name: Clone Code
         run: |
+          cd $GITHUB_WORKSPACE
           git clone --depth=1 --single-branch --branch $WRT_BRANCH $WRT_REPO ./wrt/
 
           cd ./wrt/ && echo "WRT_HASH=$(git log -1 --pretty=format:'%h')" >> $GITHUB_ENV
@@ -175,12 +188,13 @@ jobs:
         if: env.WRT_TEST != 'true'
         run: |
           cd ./wrt/
-
+          #sed -i 's|3ec87f221e8905d4b6b8b3d207b7f7c4666c3bc8db7c1f06d4ae2e78f863b8f4|881cbf75efafe380b5adc91bfb1f68add5e29c9274eb950bb1e815c7a3622807|g' feeds/nss_packages/firmware/nss-firmware/Makefile
           make download -j$(nproc)
 
-      #- name: Setup tmate session
-      #  uses: mxschmitt/action-tmate@v3
-      #  timeout-minutes: 15
+      - name: Setup tmate session
+        uses: mxschmitt/action-tmate@v3
+        if: ${{ inputs.DBGSHELL }}
+        timeout-minutes: 15
 
       - name: Compile Firmware
         if: env.WRT_TEST != 'true'
@@ -189,12 +203,9 @@ jobs:
 
           make -j$(nproc) || make -j$(nproc) V=s
 
-      - name: Machine Information
+      - name: Folder Size Information
         run: |
           cd ./wrt/
-
-          echo "======================="
-          lscpu | grep -E "name|Core|Thread"
           echo "======================="
           df -h
           echo "======================="
