--- a/.github/workflows/WRT-CORE.yml
+++ b/.github/workflows/WRT-CORE.yml
@@ -197,12 +197,12 @@ jobs:
         if: env.WRT_TEST != 'true'
         run: |
           cd ./wrt/
-          make download -j$(nproc)
-
-      - name: Setup tmate session
-        uses: mxschmitt/action-tmate@v3
-        if: ${{ inputs.DBGSHELL }}
-        timeout-minutes: 15
+          make download -j$(nproc) | tee -a /tmp/makedown.log
+          if grep -qi "nss-firmware failed to build" /tmp/makedown.log; then
+            sed -i 's|3ec87f221e8905d4b6b8b3d207b7f7c4666c3bc8db7c1f06d4ae2e78f863b8f4|881cbf75efafe380b5adc91bfb1f68add5e29c9274eb950bb1e815c7a3622807|g' feeds/nss_packages/firmware/nss-firmware/Makefile
+            make clean
+            make download -j$(nproc)
+          fi
 
       - name: Compile Firmware
         if: env.WRT_TEST != 'true'
@@ -210,6 +210,26 @@ jobs:
           cd ./wrt/
 
           make -j$(nproc) || make -j1 V=s
+
+      - name: Compile OpenAppFilter
+        if: env.WRT_TEST != 'true'
+        run: |
+          cd ./wrt/
+          echo "CONFIG_PACKAGE_luci-app-oaf=y" >>.config
+          make defconfig
+          make package/luci-app-oaf/compile -j$(nproc) || make package/luci-app-oaf/compile -j1 V=s
+          mkdir -p ./upload
+          find ./bin -type f \
+            \( -name 'kmod-ipt-conntrack-*.apk' -o -name 'kmod-ipt-conntrack-*.ipk' \
+               -o -name 'kmod-oaf-*.apk' -o -name 'kmod-oaf-*.ipk' \
+               -o -name 'libpthread-*.apk' -o -name 'libpthread-*.ipk' \
+               -o -name 'appfilter-*.apk' -o -name 'appfilter-*.ipk' \) \
+            -exec cp {} ./upload/ \;
+
+      - name: Setup tmate session
+        uses: mxschmitt/action-tmate@v3
+        if: ${{ inputs.DBGSHELL }}
+        timeout-minutes: 30
 
       - name: Folder Size Information
         run: |
@@ -222,7 +242,7 @@ jobs:
 
       - name: Package Firmware
         run: |
-          cd ./wrt/ && mkdir ./upload/
+          cd ./wrt/ && mkdir -p ./upload/
 
           cp -f ./.config ./upload/Config-"$WRT_CONFIG"-"$WRT_INFO"-"$WRT_BRANCH"-"$WRT_DATE".txt
 
