fix: opkg package name format

--- a/.github/workflows/WRT-CORE.yml
+++ b/.github/workflows/WRT-CORE.yml
@@ -218,10 +218,10 @@ jobs:
           make package/luci-app-oaf/compile -j$(nproc) || make package/luci-app-oaf/compile -j1 V=s
           mkdir -p ./upload
           find ./bin -type f \
-            \( -name 'kmod-ipt-conntrack-*.apk' -o -name 'kmod-ipt-conntrack-*.ipk' \
-               -o -name '*-oaf-*.apk' -o -name '*-oaf-*.ipk' \
-               -o -name 'libpthread-*.apk' -o -name 'libpthread-*.ipk' \
-               -o -name 'appfilter-*.apk' -o -name 'appfilter-*.ipk' \) \
+            \( -name 'kmod-ipt-conntrack*.apk' -o -name 'kmod-ipt-conntrack*.ipk' \
+               -o -name '*oaf*.apk' -o -name '*oaf*.ipk' \
+               -o -name 'libpthread*.apk' -o -name 'libpthread*.ipk' \
+               -o -name 'appfilter*.apk' -o -name 'appfilter*.ipk' \) \
             -exec cp {} ./upload/ \;
 
       - name: Setup tmate session
