fix: package name

--- a/.github/workflows/WRT-CORE.yml
+++ b/.github/workflows/WRT-CORE.yml
@@ -218,10 +218,10 @@ jobs:
           make package/luci-app-oaf/compile -j$(nproc) || make package/luci-app-oaf/compile -j1 V=s
           mkdir -p ./upload
           find ./bin -type f \
-            \( -name 'kmod-ipt-conntrack-*.apk' -o -name 'kmod-ipt-conntrack-*.ipk' \
-               -o -name '*-oaf-*.apk' -o -name '*-oaf-*.ipk' \
-               -o -name 'libpthread-*.apk' -o -name 'libpthread-*.ipk' \
-               -o -name 'appfilter-*.apk' -o -name 'appfilter-*.ipk' \) \
+            \( -name 'kmod-ipt-conntrack*.apk' -o -name 'kmod-ipt-conntrack*.ipk' \
+               -o -name '*oaf*.apk' -o -name '*oaf*.ipk' \
+               -o -name 'libpthread*.apk' -o -name 'libpthread*.ipk' \
+               -o -name 'appfilter*.apk' -o -name 'appfilter*.ipk' \) \
             -exec cp {} ./upload/ \;
 
       - name: Setup tmate session
@@ -253,6 +253,9 @@ jobs:
             for FILE in $(find ./bin/targets/ -type f -iname "*$WRT_TARGET*") ; do
               EXT=$(basename $FILE | cut -d '.' -f 2-)
               NAME=$(basename $FILE | cut -d '.' -f 1 | grep -io "\($WRT_TARGET\).*")
+              if [[ $WRT_USEOPKG = 'true' ]]; then
+                NAME="$NAME-Opkg"
+              fi
               NEW_FILE="$WRT_INFO"-"$WRT_BRANCH"-"$NAME"-"$WRT_DATE"."$EXT"
               mv -f $FILE ./upload/$NEW_FILE
             done
