--- a/.github/workflows/WRT-CORE.yml
+++ b/.github/workflows/WRT-CORE.yml
@@ -181,13 +181,13 @@ jobs:
         run: |
           cd ./wrt/
 
+          $GITHUB_WORKSPACE/Scripts/Settings.sh
+
           if [[ "${WRT_CONFIG,,}" == *"test"* ]]; then
             cat $GITHUB_WORKSPACE/Config/$WRT_CONFIG.txt >> .config
           else
             cat $GITHUB_WORKSPACE/Config/$WRT_CONFIG.txt $GITHUB_WORKSPACE/Config/GENERAL.txt >> .config
           fi
-
-          $GITHUB_WORKSPACE/Scripts/Settings.sh
 
           make defconfig -j$(nproc) && make clean -j$(nproc)
 
@@ -223,6 +223,9 @@ jobs:
                -o -name 'libpthread*.apk' -o -name 'libpthread*.ipk' \
                -o -name 'appfilter*.apk' -o -name 'appfilter*.ipk' \) \
             -exec cp {} ./upload/ \;
+          tar -czvf ./openappfilter.tar.gz -C ./upload . && mv ./openappfilter.tar.gz ./upload/
+          rm -f ./upload/*.ipk
+          rm -f ./upload/*.apk
 
       - name: Setup tmate session
         uses: mxschmitt/action-tmate@v3
